# digrag

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEATURES.md  Makefile  PLAN.md  README.md  README_ja.md  USAGE_GUIDE.md  install.sh
.auto-claude/specs/001-refactaring/: implementation_plan.json  requirements.json
.github/workflows/: ci.yml  release.yml
ai/plan/: 20251227-change-command-name.md  20251227-fix-mcp-settings.md  lessons-learned.md
benches/: search_bench.rs
scripts/: convert-changelogmemo.ts
src/: acronym_test.rs  lib.rs  main.rs
src/config/: app_config.rs  mod.rs  path_resolver.rs  search_config.rs
src/embedding/: mod.rs  openrouter.rs
src/extract/: cache.rs  changelog.rs  mod.rs  openrouter_client.rs  summarizer.rs  telemetry.rs
src/index/: bm25.rs  builder.rs  diff.rs  docstore.rs  metadata.rs  mod.rs  vector.rs
src/loader/: changelog.rs  document.rs  jsonl.rs  mod.rs
src/mcp/: mod.rs  server.rs
src/rewriter/: cache.rs  mod.rs  query_rewriter.rs
src/search/: fusion.rs  mod.rs  searcher.rs
src/tokenizer/: japanese.rs  mod.rs
tests/: cache_integration_test.rs  compatibility_test.rs  config_test.rs  embedding_build_test.rs  extract_changelog_test.rs  extract_mod_test.rs  extract_summarizer_test.rs  init_command_test.rs  integration_test_incremental.rs  openrouter_client_test.rs  path_resolution_test.rs  semantic_search_test.rs  test_cli_incremental.rs  test_docstore_remove.rs  test_document_hashing.rs  test_incremental_build.rs  test_incremental_diff.rs  test_index_metadata.rs  test_vector_index_remove.rs
