[package]
name = "digrag"
version = "0.1.0"
edition = "2021"
authors = ["takets"]
description = "Portable RAG search engine with BM25 and semantic search for any directory"
license = "MIT"
repository = "https://github.com/takets/digrag"
keywords = ["mcp", "search", "bm25", "semantic", "rag"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "digrag"
path = "src/lib.rs"

[[bin]]
name = "digrag"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Japanese tokenizer (v1.x with IPADIC support)
lindera = { version = "1.4", features = ["embedded-ipadic"] }

# Search
bm25 = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for OpenRouter API
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for changelog parsing
regex = "1.11"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Numerical computation for vectors
ndarray = "0.16"

# SQLite for query cache
rusqlite = { version = "0.32", features = ["bundled"] }

# Command-line interface
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for document IDs
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.21.3"

# Configuration file support
toml = "0.8"
directories = "5.0"
shellexpand = "3.1"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Async testing
tokio-test = "0.4"

# Snapshot testing
insta = { version = "1.41", features = ["json"] }

# Temp directories for tests
tempfile = "3.14"

# Mock HTTP
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[[bench]]
name = "search_bench"
harness = false

[features]
default = []
# Feature for development with verbose logging
verbose = []
